<resources>
    <string name="app_name">Trainy</string>
    <string name="facebook_app_id">555449878502246</string>
    <string name="fb_login_protocol_scheme">fb555449878502246</string>

    <!--  Image crop  -->
    <string name="image_chooser_title">Выберите источник</string>
    <string name="image_crop_cancel">Отмена</string>
    <string name="image_crop_select">Выбрать</string>
    <!--  Image crop  -->

    <!--  Progress dialog  -->
    <string name="progress_dialog_title">Please wait…</string>
    <!--  Progress dialog  -->

    <!--  Auth  -->
    <string name="auth_error">Auth was unsuccessful</string>
    <string name="auth_cancelled">Auth was cancelled</string>
    <string name="auth_phone_hint">Phone number</string>
    <string name="auth_social_title">or</string>
    <string name="auth_google_button">Sign in with Google</string>
    <string name="auth_facebook_button">Sign in with Facebook</string>
    <string name="auth_vk_button">Sign in with VK</string>
    <string name="auth_code_hint">Code</string>
    <string name="auth_title">Welcome to Trainy</string>
    <string name="navigation_feed">Feed</string>
    <string name="navigation_map">Map</string>
    <string name="navigation_chat">Chat</string>
    <string name="navigation_training">Training</string>
    <!--  Auth  -->

    <string name="dummy_url">https://vokrug.tv/pic/news/5/f/c/2/rsz300x300_5fc2879465129c11d65749ab9e3db7cc.jpg</string>
    <string name="navigation_profile">Profile</string>
    <string name="training_fragment_title">Training</string>
    <string name="settings_fragment_title">Settings</string>
    <string name="profile_fragment_title">Profile</string>
    <string name="map_fragment_title">Map</string>
    <string name="feed_fragment_title">Feed</string>
    <string name="chat_fragment_title">Chat</string>

</resources>
